# meson-hello

./: .gitignore  HOW_TO_BUILD_AND_DEBUG.md  README.md  meson.build  package.py
.github/actions/builder/: action.yml
.github/actions/install-linux-dependencies/: action.yml
.github/actions/install-macos-dependencies/: action.yml
.github/workflows/: build-linux.yml  build-mac.yml  build-windows.yml  build.yml  builder.yml  rez-package.yml  set_version.yml
apps/hello/: hello.cpp  meson.build
apps/hello/tests/: meson.build  test_hello.cpp
libs/common/: meson.build
libs/common/include/common/: meson_hello_api.h
libs/greetings/: meson.build
libs/greetings/include/: greetings.h
libs/greetings/include/greetings/: greetings.h
libs/greetings/src/: greetings.cpp
libs/greetings/tests/: meson.build  test_greetings.cpp
libs/hello_adapter/: meson.build
libs/hello_adapter/include/hello_adapter/: hello_adapter.h  hello_adapter_factory.h  mock_hello.h  real_hello_wrapper.h
libs/hello_adapter/src/: hello_adapter_factory.cpp  mock_hello.cpp  real_hello_wrapper.cpp
libs/hello_adapter/tests/: meson.build  test_hello_adapter.cpp
libs/os_utils/: meson.build
libs/os_utils/include/: hello.h
libs/os_utils/src/: hello.cpp
libs/salutations/: meson.build
libs/salutations/include/: salutations.h
libs/salutations/include/salutations/: salutations.h
libs/salutations/src/: salutations.cpp
libs/salutations/tests/: meson.build  test_salutations.cpp
scripts/meson/: build.py  builder.py  builder_factory.py  builder_linux.py  builder_windows.py  meson_builder.py
scripts/meson/windows/: path_finder.py
scripts/rez/: build.py  rez_builder.py
subprojects/googletest-1.17.0/: .meson-subproject-wrap-hash.txt
